--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="iso-8559-1"/>
         <meta name="description" content="Buenos dias esto es una prueba"/>
         <meta name="keywords" content="web, html, estudiar, genio, uni"/>
-        <title>Aprendiendo Html</title>
+        <title>Iglesia Bautista Libertad</title>
         <link rel="stylesheel" href="Mi hoja en css"/>
         
     </head>
